# calorie_tracker_toma

./: .gitignore  README.md  init_db.py  main.py  pyproject.toml  run.py
app/: config.py
app/cli/: main.py
app/domain/: models.py  repositories.py
app/gui/: auth_window.py  controllers.py  dashboard.py  main.py  main_window.py  meal_entry.py  product_view.py  products_view.py  profile_view.py  report_view.py
app/repositories/: database.py  databse.py  orm_models.py  sqlalchemy_repositories.py
app/services/: auth_service.py  calorie_service.py  product_service.py  progress_service.py  user_service.py
app/utils/: exceptions.py  logging.py  security.py  session.py
calorie_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
